--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     
                 </div>
                 <div class="menu-footer">
-                    <button class="menu-footer-btn">
-                        <img src="Images/icon_settings.png">
+                    <button class="menu-footer-btn" id="exportJsonBtn">
+                        <img src="Images/icon_json.png">
                     </button>
                     <button class="menu-footer-btn" id="infoBtn">
                         <img src="Images/icon_info.png">
