--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Application</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>    
 </head>
 <body>
     <div class="card">
@@ -76,6 +77,7 @@
             </div>
 
             <div class="forecast forecast-scrollable"></div>
+            <div id="map" style="height: 300px; border-radius: 12px; margin-top: 30px;"></div>
 
             <canvas id="forecastChart"></canvas>
         </div>
@@ -87,5 +89,6 @@
     <script src="chartRenderer.js"></script>
     <script src="main.js"></script>
     <script src="cityPanelManager.js"></script>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </body>
 </html>
